{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 22,
  "lineage": "73d3ced3-405c-125a-7122-b532e2daa78e",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_api_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node access for Prometheus",
            "from_port": 0,
            "id": "sgrule-861171019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0f252f2a45e86d49b",
            "self": false,
            "source_security_group_id": "sg-0869e7cd58e2bba89",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:security-group/sg-0869e7cd58e2bba89",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "To node 1025-65535",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d5b4f4fee6e4657"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0869e7cd58e2bba89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d5b4f4fee6e4657"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "norman-tf-cluster-2025020615300255750000000c",
            "name_prefix": "norman-tf-cluster-",
            "owner_id": "655394773887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "norman-tf-cluster"
            },
            "tags_all": {
              "Name": "norman-tf-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:security-group/sg-06d5b4f4fee6e4657",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d5b4f4fee6e4657",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0869e7cd58e2bba89"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0869e7cd58e2bba89"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0869e7cd58e2bba89"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0869e7cd58e2bba89"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node access for Prometheus",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0869e7cd58e2bba89"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0869e7cd58e2bba89"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0869e7cd58e2bba89"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "norman-tf-eks-node-sg-2025020615300257510000000d",
            "name_prefix": "norman-tf-eks-node-sg-",
            "owner_id": "655394773887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "norman-tf-eks-node-sg",
              "kubernetes.io/cluster/norman-tf": "owned"
            },
            "tags_all": {
              "Name": "norman-tf-eks-node-sg",
              "kubernetes.io/cluster/norman-tf": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "To node 1025-65535",
            "from_port": 1025,
            "id": "sgrule-194881469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0869e7cd58e2bba89",
            "security_group_rule_id": "sgr-09f690610fda981f2",
            "self": false,
            "source_security_group_id": "sg-06d5b4f4fee6e4657",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1670799900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0869e7cd58e2bba89",
            "security_group_rule_id": "sgr-0f648d8aee8a40653",
            "self": false,
            "source_security_group_id": "sg-06d5b4f4fee6e4657",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-1968546045",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-433887412",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-05f42475c4569ba1c",
            "self": false,
            "source_security_group_id": "sg-0869e7cd58e2bba89",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-877412170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0f1fa249541addb80",
            "self": false,
            "source_security_group_id": "sg-0869e7cd58e2bba89",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4245575900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0e22977fcd8f145ba",
            "self": false,
            "source_security_group_id": "sg-0869e7cd58e2bba89",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3998377213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0ce673c1d5931d220",
            "self": false,
            "source_security_group_id": "sg-0869e7cd58e2bba89",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2331203382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0089ab3abb84d7f68",
            "self": false,
            "source_security_group_id": "sg-0869e7cd58e2bba89",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1302806316",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0fce3e6a92e72091b",
            "self": false,
            "source_security_group_id": "sg-0869e7cd58e2bba89",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4197389697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0868a6bb94d407f51",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-3665882714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-08a1a4ae181486029",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3089467181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-03107ba733218423f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-477766850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06d5b4f4fee6e4657",
            "security_group_rule_id": "sgr-0bb84f68192eb0658",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:network-acl/acl-0609b4b29e7320d7d",
            "default_network_acl_id": "acl-0609b4b29e7320d7d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0609b4b29e7320d7d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "655394773887",
            "subnet_ids": [
              "subnet-037d912fd168cca76",
              "subnet-0818088ef8f5ccbbc",
              "subnet-0a7dfc0a521fef681",
              "subnet-0abc9a2dc0523b204",
              "subnet-0c7bb3565f8bcc4a1",
              "subnet-0c954b10dce66c524"
            ],
            "tags": {
              "Name": "norman-tf-vpc-default"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-default"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:route-table/rtb-0bfab84c7c63e914d",
            "default_route_table_id": "rtb-0bfab84c7c63e914d",
            "id": "rtb-0bfab84c7c63e914d",
            "owner_id": "655394773887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "norman-tf-vpc-default"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:security-group/sg-005ec2253bf45c70e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-005ec2253bf45c70e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "655394773887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "norman-tf-vpc-default"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-default"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:internet-gateway/igw-09903bcbd261d6e45",
            "id": "igw-09903bcbd261d6e45",
            "owner_id": "655394773887",
            "tags": {
              "Name": "norman-tf-vpc"
            },
            "tags_all": {
              "Name": "norman-tf-vpc"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09903bcbd261d6e45",
            "id": "r-rtb-08f92057a8c68abb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f92057a8c68abb9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:route-table/rtb-0aa53739be50e3dc2",
            "id": "rtb-0aa53739be50e3dc2",
            "owner_id": "655394773887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "norman-tf-vpc-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-private-eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:route-table/rtb-0d0e44b933cd307c4",
            "id": "rtb-0d0e44b933cd307c4",
            "owner_id": "655394773887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "norman-tf-vpc-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-private-eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:route-table/rtb-06da1e693692f0665",
            "id": "rtb-06da1e693692f0665",
            "owner_id": "655394773887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "norman-tf-vpc-private-eu-west-1c"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-private-eu-west-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:route-table/rtb-08f92057a8c68abb9",
            "id": "rtb-08f92057a8c68abb9",
            "owner_id": "655394773887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09903bcbd261d6e45",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "norman-tf-vpc-public"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a7e6d88846a33fd",
            "route_table_id": "rtb-0aa53739be50e3dc2",
            "subnet_id": "subnet-037d912fd168cca76"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bd8bd71d0051a4a",
            "route_table_id": "rtb-0d0e44b933cd307c4",
            "subnet_id": "subnet-0c7bb3565f8bcc4a1"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f444b31bd212444a",
            "route_table_id": "rtb-06da1e693692f0665",
            "subnet_id": "subnet-0c954b10dce66c524"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075261de5df18db8d",
            "route_table_id": "rtb-08f92057a8c68abb9",
            "subnet_id": "subnet-0abc9a2dc0523b204"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080ee29635985db65",
            "route_table_id": "rtb-08f92057a8c68abb9",
            "subnet_id": "subnet-0a7dfc0a521fef681"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064196171b411c3c5",
            "route_table_id": "rtb-08f92057a8c68abb9",
            "subnet_id": "subnet-0818088ef8f5ccbbc"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:subnet/subnet-037d912fd168cca76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.192.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037d912fd168cca76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655394773887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "norman-tf-vpc-private-eu-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-private-eu-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:subnet/subnet-0c7bb3565f8bcc4a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.192.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7bb3565f8bcc4a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655394773887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "norman-tf-vpc-private-eu-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-private-eu-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:subnet/subnet-0c954b10dce66c524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.192.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c954b10dce66c524",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655394773887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "norman-tf-vpc-private-eu-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-private-eu-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:subnet/subnet-0abc9a2dc0523b204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.192.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abc9a2dc0523b204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655394773887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "norman-tf-vpc-public-eu-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-public-eu-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:subnet/subnet-0a7dfc0a521fef681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.192.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7dfc0a521fef681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655394773887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "norman-tf-vpc-public-eu-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-public-eu-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:subnet/subnet-0818088ef8f5ccbbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.192.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818088ef8f5ccbbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655394773887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "norman-tf-vpc-public-eu-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "norman-tf-vpc-public-eu-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06cb688a526f2e6a7"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:655394773887:vpc/vpc-06cb688a526f2e6a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.192.0.0/16",
            "default_network_acl_id": "acl-0609b4b29e7320d7d",
            "default_route_table_id": "rtb-0bfab84c7c63e914d",
            "default_security_group_id": "sg-005ec2253bf45c70e",
            "dhcp_options_id": "dopt-0b7d372157cfa299b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cb688a526f2e6a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfab84c7c63e914d",
            "owner_id": "655394773887",
            "tags": {
              "Name": "norman-tf-vpc"
            },
            "tags_all": {
              "Name": "norman-tf-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}